@@ -1,3 +1,9 @@
+2009-10-03  Paul Smith  <psmith@gnu.org>
+
+	* make.h: Include <alloca.h> even on systems where __GNUC__ is
+	defined.  Not sure why it was done the other way.
+	Requested by David Boyce <dsb@boyski.com>.
+
 2009-09-30  Boris Kolpackov  <boris@codesynthesis.com>
 
 	* dep.h (dep): Add the DONTCARE bitfield.
